Projects and colleagues sections + Fixes

--- a/src/app/main/aboutme/aboutme.component.html
+++ b/src/app/main/aboutme/aboutme.component.html
@@ -9,7 +9,7 @@
     <div class="rippedPaper free">
       <div class="workContent">
         <img src="/img/remote.svg" alt="" />
-        <span>???</span>
+        <span>Placeholder</span>
       </div>
     </div>
 
