--- a/src/app/main/projects/projects.component.scss
+++ b/src/app/main/projects/projects.component.scss
@@ -3,7 +3,7 @@ span,
 h1,
 h2,
 p {
-    
+
     margin: 0;
 }
 
@@ -41,10 +41,10 @@ section {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-   
+
 
     >span {
-        
+
         font-size: 20px;
         font-weight: 500;
     }
@@ -58,7 +58,7 @@ section {
         >img {
             height: 20px;
             width: 260px;
-     
+
 
         }
 
@@ -69,13 +69,13 @@ section {
 
     }
 
-    p{
+    p {
         margin-top: 48px;
     }
 
 }
 
-.lineCover{
+.lineCover {
     position: absolute;
     background-color: white;
     width: 260px;
@@ -87,5 +87,30 @@ section {
 }
 
 .linewidth {
-  width: 0px !important;
+    width: 0px !important;
+}
+
+@media(max-width: 1280px) {
+    section {
+        height: fit-content;
+        gap: 32px;
+
+    }
+
+    .content {
+        height: fit-content;
+        flex-direction: column;
+        align-items: center;
+        gap: 32px;
+
+        >div {
+            width: 375px;
+            height: fit-content;
+        }
+    }
+
+    .title {
+        width: 320px;
+        height: 248px;
+    }
 }
