--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,10 +1,10 @@
 <section class="english">
   <div class="menubar">
-    <p class="logo">MP</p>
-    <a href="#aboutme" class="aboutme"
+    <p [ngClass]="logo" class="logo">MP</p>
+    <a href="#aboutme" class="aboutme" [ngClass]="color"
       >About me <img src="/img/aboutme.png" alt=""
     /></a>
-    <a>Skills <img src="/img/skills.png" alt="" /></a>
+    <a [ngClass]="color">Skills <img src="/img/skills.png" alt="" /></a>
     <a>Projects <img src="/img/projects.png" alt="" /></a>
     <a>Contact <img src="/img/contact.png" alt="" /></a>
     <div class="toogleLanguage">
@@ -33,7 +33,7 @@
 <div class="menu-resp" [ngClass]="{ showRespMenu: showRespMenu() }">
   <div class="menu-resp-content">
     <div class="menubar-resp">
-      <p class="logo">JR</p>
+      <p class="logo">MP</p>
       <div class="closeButtonContainer" (click)="toggleRespMenu()">
         <img class="closeRespMenu" src="/img/menuclose.svg" alt="" />
       </div>
