--- a/src/app/shared/singleproject/singleproject.component.scss
+++ b/src/app/shared/singleproject/singleproject.component.scss
@@ -1,71 +1,115 @@
 section {
-  width: 100%;
-  height: 100%;
-
-  > div {
-    position: relative;
     width: 100%;
-    height: 398.22px;
+    height: 100%;
 
-    > img {
-      width: 100%;
-      height: 100%;
-      border-radius: 20px;
-      transition: all 1s ease-in-out;
+    >div {
+        position: relative;
+        width: 100%;
+        height: 398.22px;
 
-      &:hover {
-        animation-play-state: paused;
-        transform: translateY(0) !important;
-        transform: scale(1.1) !important;
-      }
+        >img {
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
+            transition: all 1s ease-in-out;
+
+            &:hover {
+                animation-play-state: paused;
+               
+            }
+        }
     }
-  }
+
 }
 
 .imageCover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 20px;
-  transition: opacity 0.3s ease-in-out;
-
-  opacity: 0;
-
-  > div {
     position: absolute;
-    bottom: 40px;
-    right: 40px;
-  }
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    transition: opacity 0.3s ease-in-out;
+
+    opacity: 0;
+
+    >div {
+        position: absolute;
+        bottom: 40px;
+        right: 40px;
+    }
+
 }
 
 .cover {
-  opacity: 1;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0) 50%);
+    opacity: 1;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0)50%);
 }
 
 .swing {
-  animation: swing 3s ease-in-out infinite;
-  animation-play-state: running;
+    animation: swing 3s ease-in-out infinite;
+    animation-play-state: running;
 }
+
 .overlay {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  background-color: #000000;
-  color: white;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000000;
+    color: white;
 }
+
+.respbutton {
+    margin-top: 32px;
+    width: 100%;
+    height: 40px !important;
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+
 @keyframes swing {
-  0% {
-    transform: translateY(0);
-  }
+    0% {
+        transform: translateY(0);
+    }
 
-  50% {
-    transform: translateY(20px);
-  }
+    50% {
+        transform: translateY(20px);
+    }
 
-  100% {
-    transform: translateY(0);
-  }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@media(min-width:650px) {
+    .respbutton {
+        display: none;
+    }
+
+}
+
+@media(max-width:650px) {
+    .imageCover {
+        display: none;
+    }
+section{
+    width: 320px;
+    >div{
+        width: 320px;
+        height: fit-content;
+        >img{
+            width:320px;
+           height: 320px;
+        }
+
+        >h2{
+            width: 100%!important;
+        }
+        >p{
+            width: 100% !important;
+        }
+    }
+}
 }
