Work on contactform + Footer

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,8 +1,8 @@
 <section>
-    <app-hero></app-hero>
-    <app-aboutme></app-aboutme>
-    <app-skills></app-skills>
-    <app-projects></app-projects>
-    <app-colleagues></app-colleagues>
-    
+  <app-hero></app-hero>
+  <app-aboutme></app-aboutme>
+  <app-skills></app-skills>
+  <app-projects></app-projects>
+  <app-colleagues></app-colleagues>
+  <app-contact></app-contact>
 </section>
