--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,12 @@
-<p>footer works!</p>
+<section>
+  <div class="legal">
+    <div class="logo">
+      <p>MP</p>
+      <span>© Maximilian Polster 2025</span>
+    </div>
+    <a href="">Legal Notice</a>
+  </div>
+  <a href="">GitHub</a>
+  <a href="">LinkedIn</a>
+  <a href="">Email</a>
+</section>
